# Fake Makefile.am to get damned-lies to build a .pot file
@YELP_HELP_RULES@

HELP_ID = meld

HELP_FILES = \
 command-line.page \
 file-changes.page \
 file-filters.page \
 file-mode.page \
 flattened-view.page \
 folder-mode.page \
 index.page \
 introduction.page \
 legal.xml \
 missing-functionality.page \
 preferences.page \
 resolving-conflicts.page \
 text-filters.page \
 vc-mode.page \
 vc-supported.page

HELP_LINGUAS = cs de el es pl pt_BR sv
