help_files = [
    'C/command-line.page',
    'C/file-changes.page',
    'C/file-filters.page',
    'C/file-mode.page',
    'C/flattened-view.page',
    'C/folder-mode.page',
    'C/index.page',
    'C/introduction.page',
    'C/keyboard-shortcuts.page',
    'C/legal.xml',
    'C/missing-functionality.page',
    'C/preferences.page',
    'C/resolving-conflicts.page',
    'C/text-filters.page',
    'C/vc-mode.page',
    'C/vc-supported.page'
]


gnome.yelp(meson.project_name(),
    sources: help_files
)
