help_files = [
  'command-line.page',
  'file-changes.page',
  'file-filters.page',
  'file-mode.page',
  'flattened-view.page',
  'folder-mode.page',
  'index.page',
  'introduction.page',
  'legal.xml',
  'missing-functionality.page',
  'preferences.page',
  'resolving-conflicts.page',
  'text-filters.page',
  'vc-mode.page',
  'vc-supported.page',
]

media_files = [
  'figures/Meld.svg'
]


gnome.yelp(
  meson.project_name(),
  sources: help_files,
  media: media_files,
)
